argo/apps/external/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-external
  namespace: media
spec:
  type: ExternalName
  externalName: 10.0.0.5
  ports:
    - port: 8006
      targetPort: 8006
